Split Numeric VST into Longs and Doubles
The goal of this change is to let numeric script values sources know if
they are floating point or not.  Previously, this was done by plumbing
the ValueType deep into the ValuesSource.  Now, instead, pass in a
boolean, but that in turn requires the VST to know if it's floating
point or not.  Thus this split.